# jogos-digitais-proj

./: .gitignore  pyproject.toml  scoreboard.json
src/: background.py  coins.py  counter.py  deathException.py  endOfLevelException.py  enemy.py  game.py  gameOver.py  gui.py  helper.py  level.py  level_data.py  main.py  menu.py  player.py  returnToMenuException.py  scoreboard.py  scoreboardScreen.py  settings.py  soundController.py  tile.py  typeNameScreen.py
src/assets/: 0x72_DungeonTilesetII_v1.4-4x4.tsx  0x72_DungeonTilesetII_v1.4-8x8.tsx  0x72_DungeonTilesetII_v1.4.tsx  a.tiled-session  coin.m4a  inimigo.tsx  jogador.tsx  map.tiled-session  mapa.tmx  mapa1.tmx  mapa3.tmx
src/assets/mapa/: decoracao.csv  inimigo-bloqueio.csv  inimigo.csv  jogador.csv  moedas.csv  terreno.csv
src/assets/mapa/0/: inimigo-bloqueio.csv  jogador.csv  moedas.csv
src/assets/mapa/1/: inimigo-bloqueio.csv  inimigo.csv  jogador.csv  moedas.csv  terreno.csv
src/assets/mapa/2/: inimigo-bloqueio.csv  inimigo.csv  jogador.csv  moedas.csv  terreno.csv
