[tool.poetry]
name = "proj-final"
version = "0.1.0"
description = ""
authors = ["Lucas Vasconcelos <lucas@vscncls.xyz>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pytest-testmon = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
